🐛 Fix JDK 17 flags