@@ -62,5 +62,22 @@ lazy val root = (project in file("."))
       "org.apache.spark" %% "spark-sql" % "3.5.0" % Test
     ),
     Test / parallelExecution := false,
-    Test / fork := true
+    Test / fork := true,
+    Test / javaOptions ++= {
+      if (scala.util.Properties.isJavaAtLeast("17"))
+        Seq(
+          "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+          "--add-opens=java.base/java.lang=ALL-UNNAMED",
+          "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+          "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+          "--add-opens=java.base/java.io=ALL-UNNAMED",
+          "--add-opens=java.base/java.net=ALL-UNNAMED",
+          "--add-opens=java.base/java.nio=ALL-UNNAMED",
+          "--add-opens=java.base/java.util=ALL-UNNAMED",
+          "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+          "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+          "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
+        )
+      else Seq.empty
+    }
   )
